--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
 	"version": "0.1.0",
 	"description": "Upload an asset to the current GitHub release in a GitHub Actions CI environment",
 	"main": "index.js",
+	"scripts": {
+		"test": "node ./index.js --self-unittests"
+	},
 	"dependencies": {
 		"@actions/core": "^1.10.1",
 		"@actions/exec": "^1.1.1",
